<resources>
    <string name="app_name">HealthySoul</string>
    <string name="notebook">Notebook</string>
    <string name="profile">Profile</string>
    <string name="my_notebook">My notebook</string>
    <string name="personal_account_text">Личный кабинет</string>
    <string name="login_button_text">Вход</string>
    <string name="bntSignOut">Выход</string>
    <string name="btnDeleteAccount">Удалить аккаунт</string>
    <string name="next_button_text">Далее</string>
    <string name="login_prompt">Выполните вход</string>
    <string name="welcome_message">Привет, %1$s!</string>
    <string name="login_unsuccessful_msg">Вход не выполнен</string>
    <string name="login_successful_msg">Вход успешно выполнен</string>
    <string name="psychologists">Psychologists</string>
    <string name="tests">Tests</string>
    <string name="please_wait">Please wait…</string>
    <string name="you_don_t_have_any_notes_yet">You don`t have any notes yet</string>
    <string name="back">Назад</string>
    <string name="callback_home">Меню тестов</string>
    <string name="close">Закрыть тест</string>
    <string name="close_message">Вы действительно хотите завершить тест?</string>
    <string name="close_title">Закрыть тест!</string>
    <string name="dialog_negative">Нет</string>
    <string name="dialog_positive">Да</string>
    <string name="reload">Reload</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="new_note">New note</string>
    <string name="univeсity">Учреждение образования</string>
    <string name="faculty">Факультет</string>
    <string name="specialisation">Специальность</string>
    <string name="year">Год окончания</string>
    <string name="help_number">Номер быстрой помощи 8-800-900-89-89</string>
    <string name="go_to_test">Пройти тест</string>
    <string name="sing_out">Выйти из аккаунта</string>
    <string name="personal_type">Тип личности</string>
    <string name="email">E-mail</string>
    <string name="phone">Телефон</string>
    <string name="name">Имя</string>
    <string name="user_default_name">Пользователь</string>
    <string name="load_photo">Загрузить фото</string>
    <string name="delete_photo">Удалить фото</string>
    <string name="message_exit">Нажмите еще раз, чтобы выйти!</string>
    <string name="sing_delete">Удалить аккаунт</string>
    <string name="dialog_title">Вы действительно хотите удалить аккаунт?</string>
    <string name="dialog_button_positive">Удалить</string>
    <string name="dialog_button_negative">Отмена</string>
    <string name="favorites">Favorites</string>
    <string name="no_favorite_found">no_favorite_found</string>
    <string name="delete_all">Delete all</string>
    <string name="dialog_title_favorite">"Удалить из избранных? "</string>
    <string name="you_don_t_have_any_favorites_yet">You don`t have any favorites yet</string>
    <string name="add_title_favorite">Добавить в избранное?</string>
    <string name="dialog_button_positive_yes">Да</string>
</resources>