<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@id/notebook"
        android:icon="@drawable/ic_note"
        android:title="@string/notebook" />

    <item
        android:id="@id/psychologists"
        android:title="@string/psychologists"
        android:icon="@drawable/ic_baseline_people_outline_24"/>
	<item
        android:id="@id/tests"
        android:title="@string/tests"
        android:icon="@drawable/ic_test"/>
    <item
        android:id="@id/favorites"
        android:title="@string/favorites"
        android:icon="@drawable/ic_baseline_favorite_24"/>
	<item
        android:id="@id/profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_outline_person_24"/>

</menu>